--- a/style.css
+++ b/style.css
@@ -444,7 +444,38 @@ border: 1px solid black;
 #user_img{
   width: 30px;
 }
+.body{
+  width: 82%;
+  display: flex;
+  flex-wrap: wrap;
+  position: absolute;
+  margin-top: 123px;
+  margin-left: 258px;
+  top: 0;
+}
+#bulbuli{
+  position: relative;
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  
 
+}
+.bulbuli_img{
+  width: 300px;
+}
+#bulbuli_text{
+  width: auto;
+  font-size: 16px;
+}
+#brand{
+  font-size: 13px;
+  opacity: 0.8;
+}
+#view{
+  font-size: 9px;
+  opacity: 0.7;
+}
 
 
 
